<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Registro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login"></string>
    <string name="password"></string>
    <string name="etiq1">Login</string>
    <string name="etiq2">Password</string>
    <string name="btningreso">Ingresar</string>
    <string name="estado">Estado</string>
    <string name="txtcorreo"/>
    <string name="correo">Correo</string>
    <string name="Asunto">Asunto</string>
    <string name="mensaje">Mensaje</string>
    <string name="btnenviar">Enviar</string>

</resources>
